Finish content of Project 1. Style ol element so it isn't squished together. Give iFrame sandbox property to block use of links and buttons - this stops the user getting lost within ever smaller windows.

--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,10 @@ nav a {
     font-size: 1.5em;
 }
 
+ol {
+    line-height: 1.6em;
+}
+
 /* * Buttons * */
 button {
     width: 100%;
